@@ -13,6 +13,9 @@ The getsource plugin is designed for automatic inclusion of Python source code
 from a python file.
 </p>
 <div title="getsource getsource_t">Code will go here</div>
+<div title="getsource getsource_t.a_function">Code will go here</div>
+<div title="getsource getsource_t.Fantastic">Code will go here</div>
+<div title="getsource getsource_t.Fantastic.bye">Code will go here</div>
 </div>
 </body>
 </html>
